# cookiecutter-python

./: .gitignore  LICENSE  README.md  cookiecutter.json
hooks/: post_gen_hooks.py  post_gen_project.py
{{cookiecutter.package_slug_kebab}}/: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  compose.dev.yml  compose.yml  pyproject.toml
{{cookiecutter.package_slug_kebab}}/.github/workflows/: ci.yml  test.yml
{{cookiecutter.package_slug_kebab}}/docs/contributing/: 1.-contributing-guide.md  2.-coding-standard.md  3.-code-of-conduct.md  4.-acknowledgements.md
{{cookiecutter.package_slug_kebab}}/requirements/: dev.txt
{{cookiecutter.package_slug_kebab}}/scripts/: install.sh  lint.sh  test.sh
{{cookiecutter.package_slug_kebab}}/scripts/python_scripts/: upgrade_dependencies.py
{{cookiecutter.package_slug_kebab}}/src/{{cookiecutter.package_slug}}/: __init__.py  __main__.py  main.py
{{cookiecutter.package_slug_kebab}}/tests/: test_main.py  test_version.py
{{cookiecutter.package_slug_kebab}}/{{cookiecutter.package_slug}}/: __init__.py  __main__.py  main.py
{{cookiecutter.project_name}}/: .gitattributes  CHANGELOG.md  README.md  pyproject.toml  setup.cfg
{{cookiecutter.project_name}}/.github/workflows/: test.yml
{{cookiecutter.project_name}}/docs/contributing/: 1.-contributing-guide.md  2.-coding-standard.md  3.-code-of-conduct.md
{{cookiecutter.project_name}}/scripts/: clean.sh  install.sh  lint.sh  test.sh
{{cookiecutter.project_name}}/tests/: __init__.py  test_main.py  test_version.py
{{cookiecutter.project_name}}/{{cookiecutter.package_slug}}/: __main__.py
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/: __init__.py  __main__.py  main.py
