[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "{{ cookiecutter.package_slug_kebab }}"
version = "{{ cookiecutter.project_version }}"
authors = [
  { name="{{ cookiecutter.author_name }}", email="{{ cookiecutter.author_email }}" },
]
description = "{{ cookiecutter.project_description }}"
readme = "README.md"
requires-python = ">={{ cookiecutter.python_version }}"
dynamic = ["dependencies", "optional-dependencies"]

[project.scripts]
{{ cookiecutter.package_slug }} = "{{ cookiecutter.package_slug }}:main"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements/requirements-main.in"] }
optional-dependencies.dev = { file = ["requirements/requirements-dev.in"] }

[tool.ruff]
line-length = 120
target-version = "py{{ cookiecutter.python_version|replace(".", "") }}"

[tool.ruff.lint]
select = ["B", "C901", "D", "E4", "E7", "E9", "F", "I", "W", "ARG", "FIX", "A"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pylint."MESSAGES CONTROL"]
disable = "all"
enable = "C1805,E1120,R1705,W0107,W0221,W0223,W0613,W0632,W0719,W2301,W3101"

[tool.pyright]
typeCheckingMode = "standard"
deprecateTypingAliases = true
pythonVersion = "{{ cookiecutter.python_version }}"