[tool.poetry]
name = "{{cookiecutter.project_name}}"
version = "{{cookiecutter.project_version}}"
description = "{{cookiecutter.project_description}}"
authors = ["{{cookiecutter.full_name}} <{{cookiecutter.email}}>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
bandit = "^1.7"
black = {version = "^20.8-beta.1", allow-prereleases = true}
cruft = "^2.6.1"
flake8-bugbear = "^20.11.1"
ipython = "^7.20"
isort = "^5.7"
mypy = "^0.812"
pep8-naming = "^0.11.1"
portray = "^1.5.2"
proselint = "^0.10.2"
pydocstyle = "^5.1.1"
pytest = "^6.2.2"
pytest-cov = "^2.11.1"
pytest-mock = "^3.5.1"
safety = "^1.10.3"
shellcheck-py = "^0.7.1"
vulture = "^2.3"

[build-system]
requires = ["poetry>=1.1.4"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
